# server

./: .gitignore  CMakeLists.txt  demo_sql.sql  main.cpp
documentation/: .~lock.doc.odt#  .~lock.doc_for_brana.odt#  doc.odt
include/: base64.h
